Build FXIOS-8134 Create custom PR number and commit message parameters and forward them to bitrise

--- a/taskcluster/config.yml
+++ b/taskcluster/config.yml
@@ -13,6 +13,7 @@ taskgraph:
         mobile:
             name: "Firefox for iOS"
     cached-task-prefix: mobile.v2.firefox-ios
+    decision-parameters: ffios_taskgraph.parameters:get_decision_parameters
 
 workers:
     aliases:
