--- a/focus-ios/.swiftlint.yml
+++ b/focus-ios/.swiftlint.yml
@@ -21,7 +21,7 @@ only_rules: # Only enforce these rules, ignore all others
   - inclusive_language
   - implicit_getter
   - inclusive_language
-  # - invalid_swiftlint_command
+  - invalid_swiftlint_command
   - large_tuple
   # - leading_whitespace
   # - legacy_cggeometry_functions
