--- a/focus-ios/.swiftlint.yml
+++ b/focus-ios/.swiftlint.yml
@@ -15,7 +15,7 @@ only_rules: # Only enforce these rules, ignore all others
   # - empty_enum_arguments
   # - empty_parameters
   # - empty_parentheses_with_trailing_closure
-  # - for_where
+  - for_where
   # - force_try
   - implicit_getter
   - inclusive_language
