Fix MTE-2675 Workaround to run github action after automatic PR

--- a/.github/workflows/firefox-ios-autofill-playwrite-tests.yml
+++ b/.github/workflows/firefox-ios-autofill-playwrite-tests.yml
@@ -1,6 +1,8 @@
 name: Build and Run Autofill Automation
 permissions: read-all
 on:
+    workflow_call: {}
+    workflow_dispatch: {}
     pull_request:
       paths:
         - 'firefox-ios/Client/Assets/CC_Script/**'
