--- a/.github/workflows/firefox-ios-update_credential_provider_script.yml
+++ b/.github/workflows/firefox-ios-update_credential_provider_script.yml
@@ -41,3 +41,6 @@ jobs:
         title: Refactor [vXXX] auto update credential provider script
         branch: update-cred-provider-script
         token: ${{ secrets.GITHUB_TOKEN }}
+
+  call-firefox-ios-autofill-playwrite-tests:
+    uses: ./.github/workflows/firefox-ios-autofill-playwrite-tests.yml
