--- a/firefox-ios/nimbus-features/messaging/messaging-evergreen-messages.fml.yaml
+++ b/firefox-ios/nimbus-features/messaging/messaging-evergreen-messages.fml.yaml
@@ -69,5 +69,5 @@ import:
                     - "Very Satisfied"
                     - "Satisfied"
                     - "Neutral"
-                    - "Disatisfied"
-                    - "Very Disatisfied"
+                    - "Dissatisfied"
+                    - "Very Dissatisfied"
