--- a/.github/workflows/firefox-ios-autofill-playwrite-tests.yml
+++ b/.github/workflows/firefox-ios-autofill-playwrite-tests.yml
@@ -1,7 +1,10 @@
 name: Build and Run Autofill Automation
 permissions: read-all
 on:
-    workflow_call: {}
+    workflow_call:
+      secrets:
+          SLACK_WEBHOOK_URL:
+            required: true
     workflow_dispatch: {}
     pull_request:
       paths:
@@ -21,7 +24,11 @@ jobs:
     steps:
         - name: Checkout repository
           uses: actions/checkout@v4
-
+        - name: Get the current github action name
+          if: always()
+          run: |
+            github_action_name="Update credential provider script"
+            echo "github_action_name=$github_action_name" >> $GITHUB_ENV
         - name: Clone repository
           run: |
             git clone https://github.com/issammani/test-playwright.git
@@ -41,3 +48,23 @@ jobs:
             
             echo "Run tests"
             npm test
+        - name: Send custom JSON data to Slack workflow
+          if: always()
+          id: slack
+          uses: slackapi/slack-github-action@v1.26.0
+          with:
+            payload: |
+              {
+                "text": "GitHub Action Running Tests For ${{ env.github_action_name }} result: ${{ job.status }}",
+                "blocks": [
+                  {
+                    "type": "section",
+                    "text": {
+                      "type": "mrkdwn",
+                      "text": "GitHub Action Running Tests For result: ${{ job.status }}"
+                    }
+                  }
+                ]
+              }
+          env:
+            SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
