--- a/.github/workflows/firefox-ios-autofill-playwrite-tests.yml
+++ b/.github/workflows/firefox-ios-autofill-playwrite-tests.yml
@@ -21,6 +21,7 @@ jobs:
       matrix:
         python-version: [3.9]
         xcode: ["15.2"]
+    continue-on-error: true
     steps:
         - name: Checkout repository
           uses: actions/checkout@v4
