--- a/focus-ios/.swiftlint.yml
+++ b/focus-ios/.swiftlint.yml
@@ -55,7 +55,7 @@ only_rules: # Only enforce these rules, ignore all others
   - vertical_whitespace
   - void_function_in_ternary
   - void_return
-  # - file_header
+  - file_header
   - redundant_type_annotation
   - attributes
   - closing_brace
