--- a/.github/workflows/firefox-ios-update_credential_provider_script.yml
+++ b/.github/workflows/firefox-ios-update_credential_provider_script.yml
@@ -20,10 +20,9 @@ jobs:
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
     - name: Get the current github action name
-          if: always()
-          run: |
-            github_action_name="Update credential provider script"
-            echo "github_action_name=$github_action_name" >> $GITHUB_ENV
+      run: |
+        github_action_name="Update credential provider script"
+        echo "github_action_name=$github_action_name" >> $GITHUB_ENV
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v5
       with:
@@ -48,8 +47,8 @@ jobs:
         title: Refactor [vXXX] auto update credential provider script
         branch: update-cred-provider-script
         token: ${{ secrets.GITHUB_TOKEN }}
-    - name: Send custom JSON data to Slack workflow
-      if: always()
+    - name: Send Slack to notifiy if github action fails
+      if: '!cancelled()'
       id: slack
       uses: slackapi/slack-github-action@v1.26.0
       with:
