--- a/.github/workflows/firefox-ios-update_credential_provider_script.yml
+++ b/.github/workflows/firefox-ios-update_credential_provider_script.yml
@@ -5,6 +5,9 @@ on:
     - cron: '0 0 * * *'
   workflow_dispatch: # adding the workflow_dispatch so it can be triggered manually
 
+env:
+    SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -15,8 +18,11 @@ jobs:
     steps:
     - uses: actions/checkout@v4
       with:
-        persist-credentials: false
         token: ${{ secrets.GITHUB_TOKEN }}
+    - name: Get the current github action name
+      run: |
+        github_action_name="Update credential provider script"
+        echo "github_action_name=$github_action_name" >> $GITHUB_ENV
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v5
       with:
@@ -41,3 +47,27 @@ jobs:
         title: Refactor [vXXX] auto update credential provider script
         branch: update-cred-provider-script
         token: ${{ secrets.GITHUB_TOKEN }}
+    - name: Send Slack to notifiy if github action fails
+      if: '!cancelled()'
+      id: slack
+      uses: slackapi/slack-github-action@v1.26.0
+      with:
+            payload: |
+              {
+                "text": "GitHub Action ${{ env.github_action_name }} build result: ${{ job.status }}",
+                "blocks": [
+                  {
+                    "type": "section",
+                    "text": {
+                      "type": "mrkdwn",
+                      "text": "GitHub Action build result: ${{ job.status }}"
+                    }
+                  }
+                ]
+              }
+      env:
+        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+  call-firefox-ios-autofill-playwrite-tests:
+    uses: ./.github/workflows/firefox-ios-autofill-playwrite-tests.yml
+    secrets:
+      SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
