--- a/.github/workflows/firefox-ios-autofill-playwrite-tests.yml
+++ b/.github/workflows/firefox-ios-autofill-playwrite-tests.yml
@@ -48,23 +48,17 @@ jobs:
             
             echo "Run tests"
             npm test
+        - name: Set job log URL
+          if: always()
+          run: echo "JOB_LOG_URL=https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}" >> $GITHUB_ENV
         - name: Send Slack notification if tests fail
           if: '!cancelled()'
           id: slack
           uses: slackapi/slack-github-action@v1.26.0
           with:
-            payload: |
-              {
-                "text": "GitHub Action Running Tests For ${{ env.github_action_name }} result: ${{ job.status }}",
-                "blocks": [
-                  {
-                    "type": "section",
-                    "text": {
-                      "type": "mrkdwn",
-                      "text": "GitHub Action Running Tests For result: ${{ job.status }}"
-                    }
-                  }
-                ]
-              }
+            payload-file-path: "./test-fixtures/ci/slack-notification-payload-autofill-test.json"
           env:
+            JOB_STATUS: ${{ job.status == 'success' && ':white_check_mark:' || job.status == 'failure' && ':x:' }}
+            JOB_STATUS_COLOR: ${{ job.status == 'success' && '#36a64f' || job.status == 'failure' && '#FF0000' }}
             SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+            SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
