--- a/.github/workflows/firefox-ios-update_credential_provider_script.yml
+++ b/.github/workflows/firefox-ios-update_credential_provider_script.yml
@@ -47,26 +47,20 @@ jobs:
         title: Refactor [vXXX] auto update credential provider script
         branch: update-cred-provider-script
         token: ${{ secrets.GITHUB_TOKEN }}
+    - name: Set job log URL
+      if: always()
+      run: echo "JOB_LOG_URL=https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}" >> $GITHUB_ENV
     - name: Send Slack to notifiy if github action fails
       if: '!cancelled()'
       id: slack
       uses: slackapi/slack-github-action@v1.26.0
-      with:
-            payload: |
-              {
-                "text": "GitHub Action ${{ env.github_action_name }} build result: ${{ job.status }}",
-                "blocks": [
-                  {
-                    "type": "section",
-                    "text": {
-                      "type": "mrkdwn",
-                      "text": "GitHub Action build result: ${{ job.status }}"
-                    }
-                  }
-                ]
-              }
       env:
+        JOB_STATUS: ${{ job.status == 'success' && ':white_check_mark:' || job.status == 'failure' && ':x:' }}
+        JOB_STATUS_COLOR: ${{ job.status == 'success' && '#36a64f' || job.status == 'failure' && '#FF0000' }}
         SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+        SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
+      with:
+        payload-file-path: "./test-fixtures/ci/slack-notification-payload-autofill.json"
   call-firefox-ios-autofill-playwrite-tests:
     uses: ./.github/workflows/firefox-ios-autofill-playwrite-tests.yml
     secrets:
