Add FXIOS-9027 Integrate address toolbar in Client (#20142)
* Add feature flag for toolbar refactor

* Add toolbar reducer, middleware, etc

* Add ToolbarKit to project

* Fix address toolbar background color

* Set height for address toolbar

* Update comment

* Add browserDidLoad action which triggers toolbar middleware

* Add navigation toolbar to browser vc

* Add action type

* Adjust redux actions after merge

* Rename action

* Add toolbar action for home button

* Fix build

* Turn feature off

* Fix endless loop of Fakespot actions being dispatched

* Fix spelling

* Remove public for UX properties

* Remove capturing self

* Optimize code

* Fix Swiftlint error

--- a/firefox-ios/nimbus.fml.yaml
+++ b/firefox-ios/nimbus.fml.yaml
@@ -32,4 +32,5 @@ include:
   - nimbus-features/spotlightSearchFeature.yaml
   - nimbus-features/tabTrayFeature.yaml
   - nimbus-features/tabTrayRefactorFeature.yaml
+  - nimbus-features/toolbarRefactorFeature.yaml
   - nimbus-features/zoomFeature.yaml
