--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -82,6 +82,7 @@ only_rules: # Only enforce these rules, ignore all others
   - vertical_whitespace_closing_braces
   - vertical_whitespace_opening_braces
   - yoda_condition
+  - closure_body_length
 
 # These rules were originally opted into. Disabling for now to get
 # Swiftlint up and running.
