--- a/.github/workflows/firefox-ios-update_credential_provider_script.yml
+++ b/.github/workflows/firefox-ios-update_credential_provider_script.yml
@@ -4,6 +4,10 @@ on:
   schedule:
     - cron: '0 0 * * *'
   workflow_dispatch: # adding the workflow_dispatch so it can be triggered manually
+  pull_request_target:
+    types: [opened]
+    paths:
+      - 'firefox-ios/Client/Assets/CC_Script/**'
 
 env:
     SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
