add pull_request_target sync

--- a/.github/workflows/firefox-ios-update_credential_provider_script.yml
+++ b/.github/workflows/firefox-ios-update_credential_provider_script.yml
@@ -5,7 +5,7 @@ on:
     - cron: '0 0 * * *'
   workflow_dispatch: # adding the workflow_dispatch so it can be triggered manually
   pull_request_target:
-    types: [opened]
+    types: [opened, synchronize]
     paths:
       - 'firefox-ios/Client/Assets/CC_Script/**'
 
