--- a/.github/workflows/firefox-ios-autofill-playwrite-tests.yml
+++ b/.github/workflows/firefox-ios-autofill-playwrite-tests.yml
@@ -8,6 +8,7 @@ on:
     workflow_dispatch: {}
     pull_request_target:
       types: [opened, synchronize, reopened]
+      branches: ['main']
       paths:
         - 'firefox-ios/Client/Assets/CC_Script/**'
     push:
