--- a/.github/workflows/firefox-ios-autofill-playwrite-tests.yml
+++ b/.github/workflows/firefox-ios-autofill-playwrite-tests.yml
@@ -7,7 +7,7 @@ on:
             required: true
     workflow_dispatch: {}
     pull_request_target:
-      types: [opened, synchronize, reopened]
+      types: [opened, synchronize, reopened, edited]
       branches: ['main']
       #paths:
       #  - 'firefox-ios/Client/Assets/CC_Script/**'
