--- a/.github/workflows/firefox-ios-autofill-playwrite-tests.yml
+++ b/.github/workflows/firefox-ios-autofill-playwrite-tests.yml
@@ -6,14 +6,14 @@ on:
           SLACK_WEBHOOK_URL:
             required: true
     workflow_dispatch: {}
-    pull_request_target:
-      types: [reopened, assigned, edited, review_requested]
+    #pull_request_target:
+    #  types: [reopened, assigned, edited, review_requested]
       #paths:
       #  - 'firefox-ios/Client/Assets/CC_Script/**'
-    #pull_request:
-    #  branches: ['main']
-    #  paths:
-    #    - 'firefox-ios/Client/Assets/CC_Script/**'
+    pull_request:
+      branches: ['main']
+      paths:
+        - 'firefox-ios/Client/Assets/CC_Script/**'
     push:
       branches: ['main']
       paths:
@@ -57,7 +57,7 @@ jobs:
           if: always()
           run: echo "JOB_LOG_URL=https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}" >> $GITHUB_ENV
         - name: Send Slack notification if tests fail
-          if: '!cancelled()'
+          if: '!cancelled() && ${{ !github.event.pull_request.head.repo.fork }}'
           id: slack
           uses: slackapi/slack-github-action@v1.26.0
           with:
