add cancel back

--- a/.github/workflows/firefox-ios-autofill-playwrite-tests.yml
+++ b/.github/workflows/firefox-ios-autofill-playwrite-tests.yml
@@ -59,7 +59,7 @@ jobs:
             echo "JOB_LOG_URL=https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}" >> $GITHUB_ENV
             echo "${{ !github.event.pull_request.head.repo.fork }}"
         - name: Send Slack notification if tests fail
-          if: '${{ !github.event.pull_request.head.repo.fork }}'
+          if: '${{ !cancelled() && !github.event.pull_request.head.repo.fork }}'
           id: slack
           uses: slackapi/slack-github-action@v1.26.0
           with:
