Bugfix MTE-2785 Follow up: Do not send slack notification to github action launch from a PR from fork

--- a/.github/workflows/firefox-ios-autofill-playwrite-tests.yml
+++ b/.github/workflows/firefox-ios-autofill-playwrite-tests.yml
@@ -52,7 +52,7 @@ jobs:
           if: always()
           run: echo "JOB_LOG_URL=https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}" >> $GITHUB_ENV
         - name: Send Slack notification if tests fail
-          if: '!cancelled()'
+          if: '${{ !cancelled() && !github.event.pull_request.head.repo.fork }}'
           id: slack
           uses: slackapi/slack-github-action@v1.26.0
           with:
