Fix Comment Bypass Bitrise Mirror for Swiftlint Upgrades step preventing successful builds

--- a/bitrise.yml
+++ b/bitrise.yml
@@ -491,23 +491,24 @@ workflows:
             export XCODE_XCCONFIG_FILE=/tmp/tmp.xcconfig
             envman add --key XCODE_XCCONFIG_FILE --value /tmp/tmp.xcconfig
         title: Workaround carthage lipo
-    - script@1.1:
-        title: Bypass Bitrise Mirror for Swiftlint Upgrade
-        inputs:
-        - content: |-
-            #!/usr/bin/env bash
-            set -ex
-
-            echo "Swiftlint version before mirror swap"
-            swiftlint version
-            # Workaround to find the homebrew-core folder
-            brew tap homebrew/core --force
-            cd "$(brew --repository)/Library/Taps/homebrew/homebrew-core"
-            # Bypass Bitrise mirror that lags 1 week to 1 month behind homebrew-core versions
-            git remote set-url origin https://github.com/Homebrew/homebrew-core.git
-            brew upgrade swiftlint
-            echo "Swiftlint version after mirror swap"
-            swiftlint version
+    # Skip for now to fix release branches built different swiftlint and xcode versions
+    #- script@1.1:
+    #    title: Bypass Bitrise Mirror for Swiftlint Upgrade
+    #    inputs:
+    #    - content: |-
+    #        #!/usr/bin/env bash
+    #        set -ex
+    #
+    #        echo "Swiftlint version before mirror swap"
+    #        swiftlint version
+    #        # Workaround to find the homebrew-core folder
+    #        brew tap homebrew/core --force
+    #        cd "$(brew --repository)/Library/Taps/homebrew/homebrew-core"
+    #        # Bypass Bitrise mirror that lags 1 week to 1 month behind homebrew-core versions
+    #        git remote set-url origin https://github.com/Homebrew/homebrew-core.git
+    #        brew upgrade swiftlint
+    #        echo "Swiftlint version after mirror swap"
+    #        swiftlint version
     - script@1:
         inputs:
         - content: |-
