Disable rule that is blocking backport

--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -41,7 +41,6 @@ only_rules: # Only enforce these rules, ignore all others
   - redundant_void_return
   - return_arrow_whitespace
   - statement_position
-  - switch_case_alignment
   - syntactic_sugar
   - trailing_newline
   - trailing_semicolon
@@ -91,6 +90,7 @@ only_rules: # Only enforce these rules, ignore all others
   # - prohibited_interface_builder
   # - prohibited_super_call
   # - protocol_property_accessors_order
+  # - switch_case_alignment
 
 line_length:
   warning: 125
