Add FXIOS-9192 Enhanced Tracking Protection nimbus flag (#20361)

--- a/firefox-ios/nimbus.fml.yaml
+++ b/firefox-ios/nimbus.fml.yaml
@@ -33,4 +33,5 @@ include:
   - nimbus-features/tabTrayFeature.yaml
   - nimbus-features/tabTrayRefactorFeature.yaml
   - nimbus-features/toolbarRefactorFeature.yaml
+  - nimbus-features/trackingProtectionRefactor.yaml
   - nimbus-features/zoomFeature.yaml
