--- a/firefox-ios/nimbus-features/trackingProtectionRefactor.yaml
+++ b/firefox-ios/nimbus-features/trackingProtectionRefactor.yaml
@@ -8,7 +8,7 @@ features:
         description: >
           Whether the Enhanced Tracking Protection refactor is enabled or not
         type: Boolean
-        default: true
+        default: false
     defaults:
       - channel: beta
         value:
