--- a/bitrise.yml
+++ b/bitrise.yml
@@ -1760,7 +1760,9 @@ workflows:
     steps:
     - activate-ssh-key@4:
         run_if: '{{getenv "SSH_RSA_PRIVATE_KEY" | ne ""}}'
-    - git-clone@6.2: {}
+    - git-clone@6.2:
+        inputs:
+        - branch_dest: main
     - certificate-and-profile-installer@1: {}
     - script@1:
         inputs:
