Add EXP-4570 - Extend capability of experiment smoke test generator.

--- a/firefox-ios/firefox-ios-tests/Tests/ExperimentIntegrationTests/variables.yaml
+++ b/firefox-ios/firefox-ios-tests/Tests/ExperimentIntegrationTests/variables.yaml
@@ -14,3 +14,15 @@ smoke_tests:
   - SearchTest
   - ToolbarTest
   - TopTabsTest
+  - ClipBoardTests
+  - CreditCardsTests
+  - DownloadsTests
+  - FindInPageTests
+  - HistoryTests
+  - OnboardingTests
+  - PrivateBrowsingTestIphone
+  - SettingsTests
+  - TabCounterTests
+  - ToolbarMenuTests
+  - UrlBarTests
+  - ZoomingTests
