add derived data env

--- a/bitrise.yml
+++ b/bitrise.yml
@@ -106,7 +106,9 @@ workflows:
         run_if: '{{getenv "RUN_UI_TESTS" | eq "Run_UI_Tests"}}'
         inputs:
         - deploy_path: "${BITRISE_SOURCE_DIR}/DerivedData.zip"
-        - pipeline_intermediate_files: "$BITRISE_XCRESULT_PATH:BITRISE_XCRESULT_PATH"
+        - pipeline_intermediate_files: |-
+            $BITRISE_XCRESULT_PATH:BITRISE_XCRESULT_PATH
+            ${BITRISE_SOURCE_DIR}/DerivedData.zip:DERIVED_DATA_DIR
     - script@1.1:
         run_if: '{{getenv "RUN_UI_TESTS" | eq "Run_UI_Tests"}}'
         title: Run Danger 2
@@ -366,14 +368,13 @@ workflows:
         inputs:
         - content: |
             set -euxo pipefail
-            echo "$BITRISE_ARTIFACT_PATHS"
-
-            derived_data=${BITRISE_ARTIFACT_PATHS##*|}
-            echo "$derived_data"
+            echo "$DERIVED_DATA_DIR"
 
             echo "-- unzip -- "
-            exec unzip "$derived_data"
+            exec unzip "$DERIVED_DATA_DIR"
 
+            echo "show dir"
+            ls
   send_slack_notification:
     steps:
     - slack@3.1:
@@ -1637,6 +1638,8 @@ workflows:
     - deploy-to-bitrise-io@2:
         inputs:
         - deploy_path: "${BITRISE_SOURCE_DIR}/DerivedData.zip"
+        - pipeline_intermediate_files: |-
+            ${BITRISE_SOURCE_DIR}/DerivedData.zip:DERIVED_DATA_DIR
     - slack@3:
         run_if: ".IsBuildFailed"
         inputs:
@@ -1779,9 +1782,9 @@ workflows:
         inputs:
         - content: |
             set -euxo pipefail
-            echo "$BITRISE_ARTIFACT_PATHS"
+            echo "$DERIVED_DATA_DIR"
             echo "-- unzip -- "
-            exec unzip "${BITRISE_ARTIFACT_PATHS}"
+            exec unzip "${DERIVED_DATA_DIR}"
             echo "show dir"
             ls
 
