Can we use env like this?

--- a/.github/workflows/focus-ios-smoke.yml
+++ b/.github/workflows/focus-ios-smoke.yml
@@ -11,7 +11,7 @@ env:
 jobs:
     compile:
         name: Compile source code
-        runs-on: ${{ env.RUNNER }}
+        runs-on: env.RUNNER
         steps:
           - name: Check out source code
             uses: actions/checkout@v4
