Pin versions of packages

--- a/.github/workflows/focus-ios-smoke.yml
+++ b/.github/workflows/focus-ios-smoke.yml
@@ -62,8 +62,8 @@ jobs:
             - name: Install packages
               id: packages
               run: |
-                gem install xcpretty
-                pip install blockkit
+                gem install xcpretty -v 0.3.0
+                pip install blockkit==1.9.1
             - name: Setup Xcode
               id: xcode
               run: |
